<resources>
    <string name="app_name">Course Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Course Manager</string>
    <string name="nav_header_subtitle">Track:\nTerms\nCourses\nAssessments</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_example">Example action</string>
    <string name="add_course">Add Course</string>
    <string name="add_term">Add Term</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="added">ADDED</string>
    <string name="associated_courses">Associated Courses</string>
    <string name="associated_assessments">Associated Assessments</string>
    <string name="add_assoc">ADD</string>
    <string name="welcome_banner_text">WELCOME TO COURSE MANAGER</string>
    <string name="logo">logo</string>
    <string name="title">Title:</string>
    <string name="start_date">Start Date:</string>
    <string name="goal_date">Goal Date:</string>
    <string name="start_alert_date">Start Alert Date:</string>
    <string name="select_a_date">Select A Date</string>
    <string name="end_date">End Date:</string>
    <string name="end_alert_date">End Alert Date:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter Title</string>
    <string name="swipe_to_add_or_remove_courses">Swipe to associate:</string>
    <string name="extra">Extra</string>
    <string name="dash">-</string>
    <string name="delete_term_desc">delete Term</string>
</resources>
