<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTermFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titleSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/standard_text_size" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="text"
                    android:textSize="@dimen/standard_text_size" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/extraLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleLayout"
                android:padding="10dp">

                <TextView
                    android:id="@+id/typeSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="Type:" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/typeSpan"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/goalSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/typeSpinner"
                    android:text="@string/goal_date"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/goalDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeSpinner"
                    android:layout_toEndOf="@+id/goalSpan"
                    android:paddingEnd="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/select_a_date" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/extraLayout"
                android:paddingBottom="30dp"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:paddingTop="3dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textColor="@color/textPrimary" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/cancelButton"
                    android:background="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>