<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ui.AddTermFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/titleSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="@dimen/standard_text_size" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_title"
                    android:inputType="text"
                    android:textSize="@dimen/standard_text_size" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/datesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titleLayout"
                android:padding="10dp">

                <TextView
                    android:id="@+id/startSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/start_date"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/startSpan"
                    android:paddingEnd="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/select_a_date"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/endSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/startSpan"
                    android:text="@string/end_date"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/startSpan"
                    android:layout_toEndOf="@+id/startSpan"
                    android:text="@string/select_a_date"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/alertLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/datesLayout"
                android:padding="10dp">

                <TextView
                    android:id="@+id/startAlertSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/start_alert_date"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/startAlertDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/startAlertSpan"
                    android:paddingEnd="3dp"
                    android:paddingStart="3dp"
                    android:text="@string/select_a_date"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/endAlertSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/startAlertDate"
                    android:text="@string/end_alert_date"
                    android:textSize="@dimen/standard_text_size" />

                <TextView
                    android:id="@+id/endAlertDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/startAlertSpan"
                    android:layout_toEndOf="@+id/startAlertSpan"
                    android:text="@string/select_a_date"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/alertLayout"
                android:padding="10dp">

                <TextView
                    android:id="@+id/statusSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="Status:" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/statusSpan"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/typeSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/typeSpinner"
                    android:text="Mentor Info:" />

                <EditText
                    android:id="@+id/mentorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/typeSpinner"
                    android:layout_marginBottom="5dp"
                    android:layout_toEndOf="@+id/typeSpan"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/notesSpan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/mentorEditText"
                    android:text="Notes:" />

                <EditText
                    android:id="@+id/notesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mentorEditText"
                    android:layout_toEndOf="@+id/notesSpan"
                    android:inputType="text" />

            </RelativeLayout>

            <include
                android:id="@+id/associate"
                layout="@layout/associate_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesLayout" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/associate"
                android:paddingBottom="30dp"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:paddingTop="3dp">

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@color/white"
                    android:text="@string/cancel"
                    android:textColor="@color/textPrimary" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/cancelButton"
                    android:background="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</FrameLayout>