<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/white"
    tools:context=".ui.TermDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/courseTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:paddingTop="2dp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/courseStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitleTextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alertStartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseStartTextView"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitleTextView"
            android:layout_centerHorizontal="true"
            android:text="@string/dash"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/courseEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/courseTitleTextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/alertEndTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/courseEndTextView"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/deleteAssessmentImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/courseTitleTextView"
            android:layout_toStartOf="@+id/deleteTermImageView"
            android:contentDescription="@string/delete_term_desc"
            android:padding="5dp"
            android:src="@drawable/ic_edit_black_24dp" />

        <ImageView
            android:id="@+id/deleteTermImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/delete_term_desc"
            android:padding="5dp"
            android:src="@drawable/ic_delete_forever_black_24dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/alertStartTextView">

            <TextView
                android:id="@+id/typeSpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Mentor:" />

            <TextView
                android:id="@+id/mentorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/typeSpan"
                android:text="my ment" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mentorTextView"
                android:text="Status:" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/status"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="3dp"
                android:layout_toEndOf="@+id/status"
                android:text="INACTIVE" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/statusTextView"
                android:layout_centerVertical="true"
                android:text="Notes:" />

            <TextView
                android:id="@+id/notesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/share"
                android:text="This is a really long note. This note is meant for you to see what long notes look like in a text box" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/notes"
                android:src="@drawable/share" />


        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>